<resources>
   <string name="app_name">Siterlink</string>
   <string name="login">Login</string>
   <string name="dialog_sure">OK</string>
   <string name="dialog_cancel">Cancel</string>
   <string name="login_check">Please input completely!</string>
   <string name="dialog_empetycode">Please input verificaiton code</string>
   <string name="dialog_errorcode">Error, please input again</string>
   <string name="success_send">Send successfully</string>
   <string name="wait">Please hold on</string>
   <string name="personal_setting">Personal setting</string>
   <string name="warning_notices">Warning notices</string>
   <string name="system_setting">System setting</string>
   <string name="learn_more">Learn more</string>
   <string name="new_version">New</string>
   <string name="modify_code">Modify password</string>
   <string name="age">Age</string>
   <string name="dialog_btn_confim">OK</string>
   <string name="dialog_btn_cancel">Cancel</string>
   <string name="dialog_title_alert">Tip</string>
   <string name="choose_device_type">Choose device type</string>
   <string name="add_battery_instruct">Instruction</string>
   <string name="some_device">Some device</string>
   <string name="password_hint">Input password</string>
   <string name="remember_password">Remember password</string>
   <string name="next">Next</string>
   <string name="connect">Connect</string>
   <string name="wifi_contect">Wifi config</string>
   <string name="folder_input_hint">Input name</string>
   <string name="addfolder">Add localtion</string>
   <string name="all_folders">All localtion</string>
   <string name="name_is_null">Name could not be empty!</string>
   <string name="content_is_null">Content count not be empty!</string>
   <string name="password_is_null">Password could not be empty!</string>
   <string name="age_must_be_number">Age must be number</string>
   <string name="success_add">Add successfully</string>
   <string name="success_modify">Modify successfully</string>
   <string name="success_delete">Delete successfully</string>
   <string name="success_Esptouch">Config successfully</string>
   <string name="success_move">Move successfully</string>
   <string name="delete_it_or_not">Are you sure to delete %1$s? </string>
   <string name="update_name">Update name</string>
   <string name="name_is_too_long">Name is too long</string>
   <string name="please_choose_ico">Please choose icon</string>
   <string name="logout">Log out</string>
   <string name="online">Online</string>
   <string name="offline">Offline</string>
   <string name="battery_detail">Battery detail</string>
   <string name="loading_press">Loading..</string>
   <string name="switch_lan">Language</string>
   <string name="name_hint">Input phone number/email</string>
   <string name="reset_code">Reset password</string>
   <string name="register">Register</string>
   <string name="battery_normal">Normal</string>
   <string name="battery_alarm">Alarm</string>
   <string name="battery_lowvolt">Low voltage</string>
   <string name="battery_trouble">Device trouble</string>
   <string name="battery_silence">Silence</string>
   <string name="battery_not_connect">Not connected</string>
   <string name="battery_lvolt_silence">Low voltage silence</string>
   <string name="battery_test_alarm">Test alarm</string>
   <string name="linkage_alarm">Frozen_alarm</string>
   <string name="battery_normal_content">Device normal</string>
   <string name="battery_alarm_content">Fire detected, please confirm and handle.</string>
   <string name="water_alarm_content">Water leakage detected, please confirm and handle.</string>
   <string name="battery_lowvolt_content">The battery is low. Please change the battery as soon as possible. The battery type is CR123A.The device will turn off push notifications.</string>
   <string name="battery_trouble_content">The alarm is out of order. Please replace a new alarm.</string>
   <string name="battery_silence_content">The alarm is silent for 10 minutes, please pay special attention to it.</string>
   <string name="battery_not_connect_content">Please check if the product has been properly installed.</string>
   <string name="battery_lvolt_silence_content">The alarm is silent for 10 minutes, please pay special attention to it.</string>
   <string name="battery_test_alarm_content">Your device is tested properly.</string>
   <string name="water_test_alerm_content">Your device has a freezing alarm.</string>
   <string name="retry">Retry</string>
   <string name="esptouch_is_configuring">Configuring，please hold on..</string>
   <string name="failed_Esptouch_check_eq">Fail,confirm device in config net mode</string>
   <string name="failed_to_find_device">Fail to find device</string>
   <string name="pincode_get_err">Pincode request error</string>
   <string name="device_already_bind">This device is bound</string>
   <string name="device_already_bind_to">This device is bound to %1$s</string>
   <string name="net_err">Network timeout</string>
   <string name="put_to_folder_fail">Move failed</string>
   <string name="unbind_hint">Are u sure to unbind %1$s?</string>
   <string name="self_bind">This device has been bound</string>
   <string name="success_unbind">Unbind successfully</string>
   <string name="phone_hint">Please input phone number</string>
   <string name="please_input_email">Please input email</string>
   <string name="code_hint">Verification code</string>
   <string name="get_code">Get verfication code</string>
   <string name="setting_password_hint">Inout password</string>
   <string name="setting_confirm_password_hint">Confirm password</string>
   <string name="setting_new_password_hint">Input new password</string>
   <string name="setting_confirm_new_password_hint">Confirm new password</string>
   <string name="modifying_newpassword">Modifying password..</string>
   <string name="modify_newpassword_success">Modify password success</string>
   <string name="modify_age">Modify age</string>
   <string name="code_fault">Wrong password</string>
   <string name="phone_find">Find by phone</string>
   <string name="email_find">Find by email</string>
   <string name="success_reset">Reset success</string>
   <string name="please_input_complete">Please input completely!</string>
   <string name="please_input_phone">Please input phone number</string>
   <string name="password_length">Password at lease 6 numbers！</string>
   <string name="password_two_different">Two password is different</string>
   <string name="email_sended">Reset successfully，please check mailbox</string>
   <string name="serve_instruction">Registration deemed to agree to terms of service</string>
   <string name="phone_register">Register by phone</string>
   <string name="email_register">Register by email</string>
   <string name="input_graph">Please input graph verification code</string>
   <string name="check_email">Success，please check mailbox</string>
   <string name="success_register">Register successfully</string>
   <string name="choose_language">Choose language</string>
   <string name="battery_warning_his">Warninghistory</string>
   <string name="warning_alert">Please pay attention！</string>
   <string name="content_empty">No data now\click up right corner to add</string>
   <string name="all_pic">All pictures</string>
   <string name="pic_album">Album</string>
   <string name="no_one_pics">No picture at all</string>
   <string name="no_extern_storage">No external storage</string>
   <string name="pic">%1$d pics</string>
   <string name="should_you_just_one_pic">You could only choose one picture</string>
   <string name="down_success">Download success</string>
   <string name="down_fail">Download failure</string>
   <string name="downing">Downloading</string>
   <string name="insert_card">Insert card</string>
   <string name="update_alert">Current ver:%1$s,vercode:%2$d,find new ver:%3$s,new vercode:%4$d,do you want to update?</string>
   <string name="start_lan">Start Lan mode</string>
   <string name="clearup_cache">Clear cache</string>
   <string name="you_ask_i_answer">Q&amp;A</string>
   <string name="about">About</string>
   <string name="choose_pic">Choose icon</string>
   <string name="input_name">Input name</string>
   <string name="device_normal">Device normal</string>
   <string name="fire_happen">Fire detected!</string>
   <string name="low_volt">Low voltage</string>
   <string name="alarm_in_trouble">Alarm in trouble</string>
   <string name="alarm_already_cancel">Alarm cancel</string>
   <string name="alarm_no_connect">Alarm disconnected</string>
   <string name="low_volt_silence">Low volt silence</string>
   <string name="test_normal">Test normal</string>
   <string name="flood_alert">Water leakage detected!</string>
   <string name="guide_note">Pull out the paper and click "connect"</string>
   <string name="guide_tip">If failed to find device，please take out the CR123A battery and load it after one minute, then click retry</string>
   <string name="guide_fail_help">Need help?</string>
   <string name="app_version_hint">APP version</string>
   <string name="siterwell">SiterWell</string>
   <string name="other_brand">Other brand</string>
   <string name="choose_your_smoke">Choose your smoke alarm</string>
   <string name="type_setting_success">Type config successfully</string>
   <string name="exit_hint">Press again to exit %1$s</string>
   <string name="circle_mode">Cycle</string>
   <string name="timer_mode">Timer</string>
   <string name="countdown_mode">Countdown</string>
   <string name="circle_on">Cycle on(H:M)</string>
   <string name="circle_off">Cycle off(H:M)</string>
   <string name="start">Start</string>
   <string name="stop">Stop</string>
   <string name="circle_number">Cycle number</string>
   <string name="circle_no_limit">No limit cycle</string>
   <string name="count_down_time">Countdown(H:M)</string>
   <string name="count_down_action">Counddown Action off/on</string>
   <string name="count_down_notice">Phone notice</string>
   <string name="switch_to">Switch to</string>
   <string name="on">On</string>
   <string name="off">Off</string>
   <string name="are_u_sure_to_delete">Are you sure to delete？</string>
   <string name="week">Week</string>
   <string name="please_choose_action">Please choose action</string>
   <string name="please_choose_switch_time">Please choose switch time(HH:mm)</string>
   <string name="please_choose_notice_or_notice">Please choose phone notice or not</string>
   <string name="save">Save</string>
   <string name="add_timer">Add timer</string>
   <string name="edit_timer">Edit timer</string>
   <string name="set_weekday">Please set weekday</string>
   <string name="no_notice">No-notice</string>
   <string name="notice">Notice</string>
   <string name="duli_socket_switch">Socket switch!</string>
   <string name="circle_socket_switch">Cycle mode completion!</string>
   <string name="countdown_socket_switch">Countdown mode completion!</string>
   <string name="timer_socket_switch">Timer mode %1$d completion</string>
   <string name="set">Set</string>
   <string name="countdown_start">Countdown start!</string>
   <string name="countdown_stop">Countdown stop!</string>
   <string name="circle_set_success">Cycle set successfully!</string>
   <string name="folder_name">Location name</string>
   <string name="pull_to_refresh">Pull to refresh</string>
   <string name="release_to_refresh">Release to refresh</string>
   <string name="refreshing">Loading…</string>
   <string name="not_updated_yet">Not updated yet</string>
   <string name="updated_at">Last update  before…</string>
   <string name="updated_just_now">Updated just now</string>
   <string name="time_error">Timer error</string>
   <string name="minute">Min</string>
   <string name="hour">Hour</string>
   <string name="day">Day</string>
   <string name="month">Mon</string>
   <string name="year">Year</string>
   <string name="success_move_to_this_folder">Successful move to this location</string>
</resources>