<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGround"
    android:id="@+id/layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="@dimen/NormalTextSize"
            android:text="@string/folder_name"/>
        <EditText
            android:id="@+id/foldername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/folder_input_hint"
            android:textColorHint="@color/devices_offline"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/NormalTextSize"
            android:layout_marginLeft="20dp"
            android:text="@string/choose_pic"
            android:id="@+id/sle"/>
        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="3"
            android:background="@null"
            android:layout_below="@id/sle"
            android:id="@+id/icos"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:background="@drawable/common_btn_bg"
            android:text="@string/dialog_btn_confim"
            android:textColor="@color/white"
            android:id="@+id/addFolder"/>
    </RelativeLayout>
</LinearLayout>