<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGround">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/guide_2"
                android:id="@+id/guide"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_smoke"
            android:textSize="@dimen/NormalTextSize"
            android:layout_marginTop="@dimen/LargePadding"
            android:paddingLeft="15dp"
            android:id="@+id/dd"/>
        <com.siterwell.application.commonview.SettingItem
            android:id="@+id/siterwell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:item_accessoryType="arrow"
            app:item_showDivider="true"
            app:item_titleText="@string/siterwell" />
        <com.siterwell.application.commonview.SettingItem
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_accessoryType="arrow"
            app:item_showDivider="false"
            app:item_titleText="@string/other_brand" />
    </LinearLayout>
</RelativeLayout>