<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_logo_en" android:layout_gravity="center_horizontal" android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/imageView1"
        android:id="@+id/edit_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:src="@drawable/login_user" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:id="@+id/liner_phone">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/arrow"
                    android:background="@null"
                    android:hint="@string/name_hint"
                    android:textColorHint="@color/devices_offline"
                    android:layout_marginRight="@dimen/SmallPadding"
                    android:ems="10" android:inputType="textEmailAddress">
                    <requestFocus />
                </EditText>
            </RelativeLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#d5d5d5"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:src="@drawable/login_pass" />


            <com.siterwell.application.commonview.CodeEdit
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/codeedit"
                android:layout_marginLeft="10dp"
                app:code_can_see = "false"
                app:hint_text="@string/password_hint"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/save_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp">

            <ImageView
                android:id="@+id/save_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/save_pass_0" android:layout_gravity="center_vertical"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingLeft="10dp"
                 android:textColor="#808080"
                 android:text="@string/remember_password"
                 android:id="@+id/rem_text"
                 android:gravity="center_vertical"/>


        </LinearLayout>
        
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/common_btn_bg"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_below="@id/edit_content"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" android:layout_marginLeft="18dp" android:layout_marginRight="18dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_normal"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/NormalTextSize"
            android:text="@string/reset_code"
            android:id="@+id/reset_code"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_normal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/register"
            android:textSize="@dimen/NormalTextSize"
            android:id="@+id/regist"/>
    </RelativeLayout>

</RelativeLayout>