<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/top">
        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@mipmap/user_photo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="admin"
            android:textSize="@dimen/NormalTextSize"
            android:textColor="@color/black"
            android:id="@+id/admin"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/top"
        android:layout_marginTop="50dp"
        android:id="@+id/con">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/person">
            <ImageView
                android:id="@+id/one"
                android:layout_width="@dimen/menu_item_width"
                android:layout_height="@dimen/menu_item_height"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/wode_12" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/one"
                android:text="@string/personal_setting"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_font_size" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/warn_list"
            android:padding="5dp"
            android:visibility="gone">
            <ImageView
                android:id="@+id/two"
                android:layout_width="@dimen/menu_item_width"
                android:layout_height="@dimen/menu_item_height"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/wode_05" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/two"
                android:text="@string/warning_notices"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_font_size" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/system_setting">
            <ImageView
                android:id="@+id/three"
                android:layout_width="@dimen/menu_item_width"
                android:layout_height="@dimen/menu_item_height"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/wode_10" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/three"
                android:text="@string/system_setting"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_font_size" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:id="@+id/learned">
            <ImageView
                android:id="@+id/four"
                android:layout_width="@dimen/menu_item_width"
                android:layout_height="@dimen/menu_item_height"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/wode_14" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/four"
                android:text="@string/learn_more"
                android:textColor="@color/black"
                android:textSize="@dimen/setting_font_size" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/con">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:background="@drawable/common_btn_bg"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:id="@+id/logout"/>
    </RelativeLayout>
</RelativeLayout>