<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGround">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/edit_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="18dp"
                android:src="@drawable/wifi" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:id="@+id/liner_phone">
                <TextView
                    android:id="@+id/tvApSssidConnected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:layout_marginRight="@dimen/SmallPadding"
                    android:layout_marginLeft="@dimen/SmallPadding"
                    android:textSize="18sp"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#d5d5d5"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white" >
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="18dp"
                android:src="@drawable/login_pass" />
            <com.siterwell.application.commonview.CodeEdit
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edtApPassword"
                android:layout_marginLeft="18dp"
                app:code_can_see="false"
                app:hint_text="@string/password_hint"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#d5d5d5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/NormalPadding">
            <CheckBox
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/is_remember"
                android:background="@drawable/sys_model_item_selector"
                android:button="@null"
                android:checked="false"
                android:layout_marginLeft="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/remember_password"
                android:textSize="16sp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnConfirm"
            android:text="@string/next"
            style="@style/comon_btn_style"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</RelativeLayout>